search page shows list of results

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,13 @@
         <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
     </div>
 
+    <div>
+        <form action="search" method="POST">
+            <input type="text" name="search"/>
+            <input type="submit" value="search" />
+        </form>
+    </div>
 </div>
+
 </body>
 </html>
