--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,8 +22,8 @@
     </div>
 
     <div>
-        <form action="search" method="POST">
-            <input type="text" name="search"/>
+        <form action="search" method="GET">
+            <input type="text" name="q"/>
             <input type="submit" value="search" />
         </form>
     </div>
