--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -44,15 +44,16 @@
             break;
         default:
         } %>
+        <% var pp = posterPath; %>
         <% if(posterPath == null) { // check if poster is null
             posterPath = "http://epaper2.mid-day.com/images/no_image_thumb.gif"; 
         } else {
             posterPath = "http://image.tmdb.org/t/p/w92/" + posterPath;
         } %>
         <li class="media">
-            <a href="info?id=<%= results[i].id %>&mt=<%= mediaType %>"><img class="mr-3" src="<%= posterPath %>" alt="" width="92" height="138" style="object-fit: cover"></a>
+            <a href="info?id=<%= results[i].id %>&mt=<%= mediaType %>&pp=<%= pp %>&t=<%= name %>"><img class="mr-3" src="<%= posterPath %>" alt="" width="92" height="138" style="object-fit: cover"></a>
             <div class="media-body line-limit mr-3">
-            <a href="info?id=<%= results[i].id %>&mt=<%= mediaType %>"><h5 class="mt-2 mb-0"><%= name %></h5></a>
+            <a href="info?id=<%= results[i].id %>&mt=<%= mediaType %>&pp=<%= pp %>&t=<%= name %>"><h5 class="mt-2 mb-0"><%= name %></h5></a>
             <p><%= mediaType %></p>
             <p><%= overview %></p>
             </div>
