--- a/views/partials/nav_bar.ejs
+++ b/views/partials/nav_bar.ejs
@@ -1,3 +1,5 @@
+<script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">LISiT</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,6 +29,24 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
+    <% if (!logged_in) { %>
     <% include ./login %>
+    <% } else { %>
+    <ul class="navbar-nav mr-2">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle pt-0 pb-0" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i data-feather="user"></i>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/profile">Profile</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/logout">Logout</a>
+        </div>
+      </li>
+    </ul>
+    <% } %>
   </div>
 </nav>
+<script>
+  feather.replace()
+</script>
