--- a/views/partials/nav_bar.ejs
+++ b/views/partials/nav_bar.ejs
@@ -39,6 +39,7 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/profile">Profile</a>
+          <a class="dropdown-item" href="/list/user?id=<%= user_id %>">List</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="/logout">Logout</a>
         </div>
