--- a/views/partials/login.ejs
+++ b/views/partials/login.ejs
@@ -1,4 +1,4 @@
-<form class="form-inline my-2 my-lg-0 ml-2" action="/login" method="POST">
+<form class="form-inline my-2 my-lg-0 ml-2" action="/index-login" method="POST">
     <input class="form-control mr-sm-2" type="email" placeholder="Email" aria-label="Email" name="email">
     <input class="form-control mr-sm-2" type="password"placeholder="Password" aria-label="Password" name="password">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
